--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div class="tagSplashcloud topSplashV3 fxSplashSlideIn3"></div>
 
     <!-- NAVBAR -->
-    <nav id="navbar" class="navbar sticky-top bg-body-tertiary ps-4 pe-4">
+    <nav id="navbar" class="navbar sticky-top bg-body-tertiary ps-2 pe-2">
 
         <div class="container-fluid ps-0 pe-0">
 
@@ -111,9 +111,9 @@
                 </div>
             </div>
 
-            <div class="hstack gap-3 ">
+            <div class="hstack gap-3">
 
-                <div class="container ms-4 mt-2 mb-2 border border-2 rounded">
+                <div class="container ms-2 mt-2 mb-2 border border-2 rounded">
                     <div class="w-input-container">
                         <div class="w-input-text-group">
                             <div id="inputSendNewMsg" name="message" class="w-input-text" contenteditable
@@ -125,10 +125,10 @@
                     </div>
                 </div>
 
-                <!-- <input id="inputSendNewMsg" class="form-control" type="text" name="message" placeholder="Mensagem" required onkeydown="startTyping()"> -->
-                <!-- <div class="vr"></div> -->
-                <button type="submit" class="btn btn-secondary rounded-circle me-4 hover"><i
-                        class="bi bi-send hover"></i></button>
+                <button type="submit" class="btn btn-secondary rounded-circle me-2 hover">
+                    <i class="bi bi-send hover"></i>
+                </button>
+
             </div>
         </div>
 
