[06012024 2004] Create icon and alter name app

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Chat.io</title>
+    <link rel="icon" sizes="32x32" type="image/png" href="img/system/logo/logo-pinp-chat-50x50.ico">
+    <title>PinpChat</title>
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/splashCloud.css" />
